objects/GCR_Content_Document_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Net_Days_Override__c</fullName>
        <description>Optional field to override NetSuite Net Days on the Invoice</description>
        <inlineHelpText>Optional field to override NetSuite Net Days on the Invoice</inlineHelpText>
        <label>Net Days Override</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>1% 10 Net 30</fullName>
                </value>
                <value>
                    <fullName>1.5% 10 Net 30</fullName>
                </value>
                <value>
                    <fullName>2% 10 Net 30</fullName>
                </value>
                <value>
                    <fullName>3% 10 Net 30</fullName>
                </value>
                <value>
                    <fullName>30 days from end of month</fullName>
                </value>
                <value>
                    <fullName>40 days from end of month</fullName>
                </value>
                <value>
                    <fullName>45 days from end of month</fullName>
                </value>
                <value>
                    <fullName>60 days from end of month</fullName>
                </value>
                <value>
                    <fullName>75 days from end of month</fullName>
                </value>
                <value>
                    <fullName>90 Days from End of Month</fullName>
                </value>
                <value>
                    <fullName>Due 1 day from invoice date</fullName>
                </value>
                <value>
                    <fullName>Due 10th of following month</fullName>
                </value>
                <value>
                    <fullName>Due 14 days from invoice date</fullName>
                </value>
                <value>
                    <fullName>Due 25th of month</fullName>
                </value>
                <value>
                    <fullName>Due 45 days from invoice date</fullName>
                </value>
                <value>
                    <fullName>Due Net at end of month</fullName>
                </value>
                <value>
                    <fullName>Due on receipt</fullName>
                </value>
                <value>
                    <fullName>Net 10</fullName>
                </value>
                <value>
                    <fullName>Net 120</fullName>
                </value>
                <value>
                    <fullName>Net 14</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 150</fullName>
                </value>
                <value>
                    <fullName>Net 180</fullName>
                </value>
                <value>
                    <fullName>Net 20</fullName>
                </value>
                <value>
                    <fullName>Net 21</fullName>
                </value>
                <value>
                    <fullName>Net 28</fullName>
                </value>
                <value>
                    <fullName>Net 335</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Date_Option__c</fullName>
        <inlineHelpText>Order date to be populated on Monthly Billing Order.</inlineHelpText>
        <label>Order Date Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Date</fullName>
                </value>
                <value>
                    <fullName>Last Day of Usage Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outbound_Billing_Type__c</fullName>
        <label>Outbound Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Origin</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outbound_Rate_Table_Discount__c</fullName>
        <description>Optional Outbound Rate Table Discount applied at the time of order creation. Enter a whole number for percentage. For example to discount 10%, enter 10.</description>
        <inlineHelpText>Optional Outbound Rate Table Discount applied at the time of order creation. Enter a whole number for percentage. For example to discount 10%, enter 10.</inlineHelpText>
        <label>Outbound Rate Table Discount</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Override_Invoice_Footer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this flag to override with footer text specified on Contract.</inlineHelpText>
        <label>Override Invoice Footer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Adjustment_Description__c</fullName>
        <label>PO Adjustment Description</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_End_Date__c</fullName>
        <label>PO End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Remaining_Balance__c</fullName>
        <label>PO Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Start_Date__c</fullName>
        <label>PO Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Starting_Balance__c</fullName>
        <label>PO Starting Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <inlineHelpText>PO # from Quote. Can be overridden on Billing Contract. Appears on Invoice.</inlineHelpText>
        <label>PO #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Agreement_Type_Other__c</fullName>
        <label>Partner Agreement Type (Other)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Other__c</fullName>
        <label>Payment Terms (Other)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Net30</fullName>
                </value>
                <value>
                    <fullName>Net45</fullName>
                </value>
                <value>
                    <fullName>Net60</fullName>
                </value>
                <value>
                    <fullName>Net90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Penalties_Description__c</fullName>
        <label>Penalties (Description)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Penalties__c</fullName>
        <label>Penalties</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postal_Code_Override__c</fullName>
        <description>(Cloud) Billing Optional Postal Code for Taxation purposes</description>
        <inlineHelpText>(Cloud) Billing Optional Postal Code for Taxation purposes</inlineHelpText>
        <label>Postal Code Override</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_End_Date__c</fullName>
        <label>Pricing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing_Start_Date__c</fullName>
        <label>Pricing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing_Start_Day__c</fullName>
        <formula>DAY( Pricing_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Start Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Terms__c</fullName>
        <label>Pricing Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <label>Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Terms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_with_Termed_Discount_Period__c</fullName>
        <label>Pricing	 with Termed Discount Period</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Probability_of_Occurring_1__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>Probability of Occurring</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Probability_of_Occurring_2__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>Probability of Occurring</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Probability_of_Occurring_3__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>Probability of Occurring</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>Downstream Impact: All
Department Owner: All
Help Text: Formula to display the Offering Type for this Contract</description>
        <formula>IF (NOT(ISBLANK(Quote__c)),(IF(TEXT(Quote__r.BigMachines__Opportunity__r.Offering_Detail__c) == &apos;Subscription&apos;&amp;&amp;Document_Name__c == &apos;Cloud Billing Contract&apos;,Quote__r.Offering_Type__c,IF (Document_Name__c == &apos;Cloud Billing Contract&apos;, 
TEXT(Quote__r.BigMachines__Opportunity__r.Lines_of_Businesses__c), Quote__r.Offering_Type__c))),&apos;PureCloud&apos;)</formula>
        <inlineHelpText>Formula to display the Offering Type for this Contract based off of Quote. PureCloud if not Quote and a Zoura Quote.</inlineHelpText>
        <label>Product Group/Edition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Services_Covered_by_Contract1__c</fullName>
        <label>Product/Services Covered by Contract</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Cloud/Hosted</fullName>
                </value>
                <value>
                    <fullName>Saas</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Services_Covered_by_Contract__c</fullName>
        <label>Product/Services Covered by Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Cloud/Hosted</fullName>
                </value>
                <value>
                    <fullName>Saas</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Services_Other__c</fullName>
        <label>Product/Services (Other)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_URL__c</fullName>
        <description>What it Does? Stores the content public url for contract attachments 
Downstream Impact? Impacts quoting tool 
Which department is owner? Cloud Billing &amp; Sales Team</description>
        <label>Public URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PureBridge_Opportunity__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>PureBridge Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ramp_End_Date__c</fullName>
        <description>Billing. End of Billing Setup Ramp Period</description>
        <inlineHelpText>Billing. End of Billing Setup Ramp Period</inlineHelpText>
        <label>Ramp End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ramp_Start_Date__c</fullName>
        <description>Billing. Start of Billing Setup Ramp Period</description>
        <inlineHelpText>Billing. Start of Billing Setup Ramp Period</inlineHelpText>
        <label>Ramp Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Contract_Class__c</fullName>
        <label>Revenue Contract Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Right_to_Burst__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Right to Burst</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Right_to_Remix__c</fullName>
        <formula>if (Right_to_Burst__c = TRUE, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Right to Remix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA_Other__c</fullName>
        <label>Cloud SLA(Terms)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>Cloud SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Level_Agreement_S_N__c</fullName>
        <label>Service Level Agreement (S/N)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Non-Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Level_Agreement__c</fullName>
        <label>Service Level Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Terms_Opt__c</fullName>
        <label>Shipping Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FTP/FOB Shipping Point</fullName>
                </value>
                <value>
                    <fullName>FTP/FOB Destination</fullName>
                </value>
                <value>
                    <fullName>FTP</fullName>
                </value>
                <value>
                    <fullName>FOB Shipping Point</fullName>
                </value>
                <value>
                    <fullName>FOB Destination</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Terms__c</fullName>
        <label>Shipping Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sold_To_Name_Formula__c</fullName>
        <description>Downstream Impact: All
Department Owner: All
Help Text: Formula to display Sold To on either a Quote or Zuora Quote</description>
        <formula>IF( ISBLANK(Quote__c) , Zuora_Quote__r.zqu__Account__r.Name, Quote__r.Sold_To_Name__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula to display Sold To on either a Quote or Zuora Quote</inlineHelpText>
        <label>Sold To Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_ies__c</fullName>
        <label>Territory(ies)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usage_Data_Submission_Method__c</fullName>
        <description>What it does? Indicator of auto/manual submission of usage data files by customer. Downstream Impact? None. Which Department is Owner? IT</description>
        <inlineHelpText>What it Does? Indicator of auto/manual submission of usage data files by customer. &quot;Automated&quot; indicates that the usage data files will be submitted via automated process. &quot;Manual&quot; indicates that the usage data files will be submitted via manual process.</inlineHelpText>
        <label>Usage Data Submission Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automated</fullName>
                    <default>true</default>
                    <label>Automated</label>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Hybrid/No Bursting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_1__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_2__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_3__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Varaible_Consideration__c</fullName>
        <description>where : Legal DSR / Meta Data / Finance Section			
why : Dan Best Request
who : Liam Clifford</description>
        <label>Varaible Consideration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View_Folder__c</fullName>
        <formula>HYPERLINK(&quot;/apex/GCRContentDocumentDetails?showAll=false&amp;embedded=false&amp;hideHeader=false&amp;showFromCurrentGCR=false&amp;accId=&quot;&amp; Account_Name__r.Id &amp; &quot;&amp;documentRecordId=&quot; &amp; Id  &amp; &quot;&amp;id=&quot; &amp; Id ,&quot;Folder View&quot;,&quot;_new&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Folder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visibility_Status__c</fullName>
        <label>Visibility Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visible</fullName>
                    <default>true</default>
                    <label>Visible</label>
                </value>
                <value>
                    <fullName>Hidden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Other__c</fullName>
        <label>Warranty Other</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Warranty_Period_Start_Other__c</fullName>
        <label>Warranty Period Start Date(Other)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Period_Start__c</fullName>
        <label>Warranty Period Start Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Software Delivery</fullName>
                </value>
                <value>
                    <fullName>PS Delivery</fullName>
                </value>
                <value>
                    <fullName>PS Acceptance</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Period_Type__c</fullName>
        <label>Warranty Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Period__c</fullName>
        <label>Warranty Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                </value>
                <value>
                    <fullName>90 Days</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <label>Warranty</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Non-Standard</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Downstream Impact: All
Department Owner: All
Help Text: To set the relationship to pure cloud quote and contract</description>
        <inlineHelpText>The relationship to PureCloud Zuora Quote</inlineHelpText>
        <label>Zuora Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contracts</label>
    <listViews>
        <fullName>Paul_Bell_GCR_Content_Document_Detail</fullName>
        <filterScope>Queue</filterScope>
        <label>Krysta</label>
        <queue>Paul_Bell_Krysta</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Contracts - {000000}</displayFormat>
        <label>Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>